--- a/app-api/src/main/webapp/static/admin/user/views/login.html
+++ b/app-api/src/main/webapp/static/admin/user/views/login.html
@@ -1,24 +1,40 @@
 <div class="login">
     <div class="content">
         <!-- BEGIN LOGIN FORM -->
-        <form name="login-form" class="login-form" novalidate ng-submit="login()" >
+        <form name="loginForm" class="login-form" novalidate" >
             <h3 class="form-title font-green">账户登录</h3>
-            <div class="alert alert-danger display-hide">
-                <button class="close" data-close="alert"></button>
-                <span> Enter any userName and password. </span>
-            </div>
+            <!--<div class="alert alert-danger display-hide">-->
+                <!--<button class="close" data-close="alert"></button>-->
+                <!--<span> Enter any userName and password. </span>-->
+            <!--</div>-->
             <div class="form-group">
                 <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
-                <label class="control-label visible-ie8 visible-ie9">Username</label>
-                <input class="form-control form-control-solid placeholder-no-fix" type="text" autocomplete="off" placeholder="Username" name="userName" ng-model="login.userName"/> </div>
-            <div class="form-group">
-                <label class="control-label visible-ie8 visible-ie9">Password</label>
-                <input class="form-control form-control-solid placeholder-no-fix" type="password" autocomplete="off" placeholder="Password" name="password" ng-model="login.password"/> </div>
+                <label class="control-label">账户/手机号</label>
+                <input class="form-control form-control-solid placeholder-no-fix" type="text" autocomplete="off" placeholder="User name or Phone Number" name="userName" ng-model="loginData.userName" required/> </div>
+                <div class="alert alert-danger" ng-show="loginForm.userName.$error.required && loginForm.userName.$touched">
+                    <strong>请注意！</strong>
+                    账户/手机号 不能为空。
+                </div>
+
+        <div class="form-group">
+                <label class="control-label">密码</label>
+                <input class="form-control form-control-solid placeholder-no-fix" type="password" autocomplete="off" placeholder="Password" name="password" ng-model="loginData.password" required/> </div>
+                <div class="alert alert-danger" ng-show="loginForm.password.$error.required && loginForm.password.$touched">
+                    <strong>请注意！</strong>
+                    密码 不能为空。
+                </div>
+
             <div class="form-actions">
-                <button type="submit" class="btn green uppercase">确定</button>
+                <button type="submit" class="btn green uppercase" ng-disabled="loginForm.$invalid" ng-click="login()">登录</button>
                 <label class="rememberme check">
-                    <input type="checkbox" name="remember" value="1" no-model="login.remember"/>记住我 </label>
-                <a ui-sref="public.forget" id="forget-password" class="forget-password">忘记密码？</a>
+                    <input type="checkbox" name="remember" value="1" no-model="remember"/>记住我 </label>
+                <a ui-sref="public.frame.forget" id="forget-password" class="forget-password">忘记密码？</a>
+            </div>
+            <div class="form-group">
+                <div ng-class="{true:'alert alert-success',false:'alert alert-danger'}[submitStatus]" ng-show="submited">
+                    <button class="close" data-close="alert"></button>
+                    <span>{{submitMessage}}</span>
+                </div>
             </div>
             <div class="login-options">
                 <h4>联合登录</h4>
@@ -39,7 +55,7 @@
             </div>
             <div class="create-account">
                 <p>
-                    <a ui-sref="public.signin" id="register-btn" class="uppercase">注册新账户</a>
+                    <a ui-sref="public.frame.signin" id="register-btn" class="uppercase">注册新账户</a>
                 </p>
             </div>
         </form>
